Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-29163

QThreadPool priority is broken

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • 5.1.0 RC1, 5.1.0
    • 5.0.0, 5.0.2
    • Core: Threads
    • None
    • 6c98035c99700b4cd727fbf1158e346b9a02744c

      QThreadPool priority seems to execute runnables in order it has been added rather in order of the priority it has got.
      It seems to be working good in Qt4.
      Attached example demonstrate it.

        1. Mymain.cpp
          0.6 kB
        2. ThreadPoolTest.zip
          2 kB
        For Gerrit Dashboard: QTBUG-29163
        # Subject Branch Project Status CR V

            thiago Thiago Macieira
            qtcomsupport Qt Support
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes